--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ button #reset-wz{
     height: 20vw;
     /* width:200px;
     height:200px; */
+    font-weight: bolder;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -75,6 +76,8 @@ button #reset-wz{
  #infoDiv p{
     max-width: 60.5vw;
     border:0.25vw solid black;
+    background-color: black;
+    color:antiquewhite;
     /* max-width: 605px;
     border:2.5px solid black; */
  }
