--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,17 @@ body{
     margin: 5%;
     font-size:1em;
  }
+
  #wholeDiv{
    display:flex;
    flex-direction: column;
-   max-width: 610px;
+   max-width: 61vw;
  }
+ /*
 button{
-   font-size: 1em;
+   font-size: 12px;
 }
+*/
 #buttonsDiv{
    display:flex;
    justify-content: space-between;
@@ -54,6 +57,7 @@ button #reset-wz{
     /* width:200px;
     height:200px; */
     font-weight: bolder;
+    font-size: medium;
     display:flex;
     justify-content: center;
     align-items: center;
