--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ button #reset-wz{
     /* width:200px;
     height:200px; */
     font-weight: bolder;
-    font-size: medium;
+    font-size: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
