--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ button{
  #wholeDiv{
    display:flex;
    flex-direction: column;
-   max-width: 76vw;
+   max-width: min(76vw, 510px);
  }
  
 #notifications{
@@ -43,15 +43,16 @@ button #reset-wz{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
-   max-width: 76.5vw;
-   max-height: 76.5vw;
+   
    background-color:black;
-   gap:0.25vw;
-   border:0.25vw solid black;
+   gap:min(0.25vw, 1.5px);
+   border:min(0.25vw, 1.5px) solid black;
 }
 
  
 .myform{
+   display:flex;
+   justify-content: space-between;
    margin-bottom:20px;
 }
 .myform button{
@@ -59,8 +60,8 @@ button #reset-wz{
 }
 
 .sector-item{
-   width: 25vw;
-   height: 25vw;
+   width: min(25vw, 168px);
+   height: min(25vw, 168px);
    font-weight: bolder;
    font-size:inherit;
    display:flex;
